# oraura-app

./: .env.example  .gitignore  bug.md  package.json  pnpm-lock.yaml  tsconfig.json
oraura/: mvp.md  readme.md  sprint.md
prisma/: schema.prisma  seed.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_catalog_description.sql  0003_app_settings.sql  0004_app_setup_state.sql
src-tauri/src/: api.rs  app_settings.rs  app_setup.rs  catalog.rs  db.rs  ids.rs  lib.rs  main.rs  orders.rs
src/app/dashboard/: data.json
src/components/: app-sidebar.tsx  app-splash-screen.tsx  chart-area-interactive.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  page-loading-skeleton.tsx  route-placeholder-page.tsx  section-cards.tsx  site-header.tsx
src/hooks/: use-app-bootstrap.ts  use-app-settings.ts  use-catalog.ts  use-orders.ts
src/lib/: app-settings.ts  app-setup.ts  catalog-store.ts  catalog.ts  order-store.ts  orders.ts
src/pages/: catalog-page.tsx  checkout-page.tsx  dashboard-page.tsx  kitchen-page.tsx  orders-page.tsx  settings-page.tsx  setup-page.tsx
